--- a/src/components/IntroSection/IntroSection.css
+++ b/src/components/IntroSection/IntroSection.css
@@ -4,6 +4,7 @@
     padding: 54px 0 30px 0;
     display: flex;
     justify-content: center;
+  
 }
 
 .profile-card {
@@ -284,7 +285,7 @@
         position: absolute;
         /* new */
         left: 50%;
-        top: 360px;
+        top: 364px;
         /* sits a bit outside the picture – tweak if you like */
         transform: translateX(-50%);
         flex-direction: column;
@@ -320,7 +321,7 @@
 
     .profile-info-area {
         width: 100%;
-        padding: 24px 18px 0 18px;
+        /* padding: 24px 18px 0 18px; */
         background: #fff;
     }
 
@@ -385,6 +386,6 @@
 
 @media (max-width: 400px) {
     .profile-info-area {
-        padding: 22px 7px 0 7px;
+        /* padding: 22px 7px 0 7px; */
     }
 }
