--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,7 +1,8 @@
 * { margin: 0; }
 
 .navbar {
-  width: 100vw;
+  /* width: 100vw; */
+  max-width: 100%;
   background: #252525;
   color: #fff;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
